terrafrom/modules/alb/main.tf
resource "aws_lb" "main" {
    name = "Java App Load Balancer"
    internal = false
    load_balancer_type = "application"
    security_groups =  [aws_security_group.alb.id]
    subnets = var.public_subnets

    enable_deletion_protection = true

    tags = {
        name = "${var.environment}-alb"
        Environement = var.environment
    }
  
}
resource "aws_target_group" "main" {
   name = "${var.enviornment}-tg"
   port = 8080
   protocol = "HTTP"
   vpc_id = var.vpc_id
  

    health_check {
        enabled             = true
        interval            = 30
        path                = "/"
        port                = "traffic-port"
        protocol            = "HTTP"
        timeout             = 5
        healthy_threshold   = 3
        unhealthy_threshold = 2
        matcher             = "200"
  }
  tags ={
    Name = "${var.environment}-tg"
    Environment = var.environment
  }
}

resource "aws_lb_listener" "main" {
  load_balancer_arn = aws_lb.front_end.arn
  port              = "80"
  protocol          = "HTTP"
 
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}
resource "aws_security_group" "alb " {
    name = "${var.environment}-alb-sg"
    description = "security group for alb"
    vpc_id = var.vpc_id

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }
    ingress  {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
     tags ={
    Name = "${var.environment}-tg"
    Environment = var.environment
  }
}
